# WhatsApp

./: .dockerignore  .env.example  .gitignore  Agents.md  Dockerfile  README.md  _perf_db.py  _sse_test.py  _test_notifications.py  _test_notifications2.py  _test_templates.py  _test_verify.py  check_fix.py  debug_test.py  docker-compose.prod.yml  docker-compose.yml  extract_chinese.py  fix_by_dist.py  fix_bytes.py  fix_encoding.py  fix_encoding2.py  fix_encoding_final.py  fix_encoding_gbk.py  fix_final.py  fix_garbled.py  fix_garbled2.py  fix_garbled3.py  pyproject.toml  remove_legend.ps1  run_backend_local.py  run_server.py  test_gbk.py  tmp_create_agent.json  tmp_find_routes.py  tmp_fix_provider.ps1  tmp_fix_providers.py  tmp_h5_debug.db  tmp_h5_debug2.db  tmp_media_debug.db  tmp_media_debug2.db  (+10 more)
agents/: ai_agent.md  api_agent.md  db_agent.md  deploy_agent.md  frontend_agent.md  human_handover_agent.md  logging_agent.md  monitoring_agent.md  queue_agent.md  template_agent.md  testing_agent.md
alembic/: env.py
app/: _test_lr_be.py  main.py  worker.py
docs/: README.md  admin-frontend-api-audit-report.md  admin-frontend-session-handoff-2026-06-12.md  deployment-checklist.md  h5-backend-gap-report.md  h5-member-session-handoff-2026-06-12.md  h5-member-v6-frontend-breakdown-priority.md  h5-member-v6-page-wireframe-copy-brief.md  marketing-backend-api-audit.md  permission-center-backend-final.md  recovery-runbook.md  session-handoff-mainline-2026-06-12.md  task-plan-admin-fix.md  task-plan-admin-frontend-launch.md  task-plan-admin-frontend-round2.md  task-plan-backend.md  (+48 more)
(+1377 files in other folders)
